fix map tip positioning on wrap and z-index

--- a/src/app/components/helper/mapTip/_MapTip.scss
+++ b/src/app/components/helper/mapTip/_MapTip.scss
@@ -3,7 +3,7 @@ $textColor: #000;
 
 .map-tip {
   position: absolute;
-  z-index: 100;
+  z-index: 1;
   @include filter(drop-shadow(1px 1px 3px #888));
 
   .content {
