--- a/src/app/components/map/_Map.scss
+++ b/src/app/components/map/_Map.scss
@@ -56,8 +56,4 @@
       margin: 3px 0 0 -2px;
     }
   }
-
-  g,g {
-    cursor: pointer;
-  }
 }
